Update and rename common-indiedroid.conf to BeagleV-Ahead.conf
updating ideas...

--- a/BeagleV-Ahead.conf
+++ b/BeagleV-Ahead.conf
@@ -1,11 +1,11 @@
 display_alert "Included" "common-indiedroid.conf for common custom configuration values" "info"
 
 # Assert that this is a 3rd party image
-declare -g ROOTPWD="indiedroid"   # change default password for differentiate
+declare -g ROOTPWD="root"   # change default password for differentiate
 
-declare -g VENDOR="Indiedroid"
+declare -g VENDOR="BeagleV-Ahead"
 declare -g MAINTAINER="3rd Party"
-declare -g MAINTAINER="not-igor@example.com"
+declare -g MAINTAINER="seth@lafayette-parish.com"
 declare -g SKIP_ARMBIAN_REPO=yes  # this is a custom unofficial build leave armbian repos alone
 
 # configuration bases
