--- a/config-beaglev-ahead.conf
+++ b/config-beaglev-ahead.conf
@@ -6,11 +6,11 @@ declare -g ROOTPWD="root"   # change default password for differentiate
 declare -g VENDOR="BeagleV-Ahead"
 declare -g MAINTAINER="3rd Party"
 declare -g MAINTAINER="seth@lafayette-parish.com"
-declare -g SKIP_ARMBIAN_REPO=yes  # this is a custom unofficial build leave armbian repos alone
+declare -g SKIP_ARMBIAN_REPO="yes"  # this is a custom unofficial build leave armbian repos alone
 
 # configuration bases
 
-export COMPRESS_OUTPUTIMAGE=sha,img,xz	# process xz compressed image and sha file for vailidating integirty
+export COMPRESS_OUTPUTIMAGE="sha,img,xz"	# process xz compressed image and sha file for vailidating integirty
 export DEST_LANG="en_US.UTF-8"			# assert my values from the west
 export TZDATA="Etc/UTC"					# rudely assert my values from the west
 export AUFS="no"						# not needed in modern times
