--- a/config-beaglev-ahead.conf
+++ b/config-beaglev-ahead.conf
@@ -1,9 +1,9 @@
-display_alert "Included" "common-indiedroid.conf for common custom configuration values" "info"
+display_alert "Included" "common-beaglev-ahead.conf for common custom configuration values" "info"
 
 # Assert that this is a 3rd party image
 declare -g ROOTPWD="root"   # change default password for differentiate
 
-declare -g VENDOR="BeagleV-Ahead"
+declare -g VENDOR="beaglev-ahead"
 declare -g MAINTAINER="3rd Party"
 declare -g MAINTAINER="seth@lafayette-parish.com"
 declare -g SKIP_ARMBIAN_REPO="yes"  # this is a custom unofficial build leave armbian repos alone
