--- a/config-beaglev-ahead-sid.conf
+++ b/config-beaglev-ahead-sid.conf
@@ -1,6 +1,6 @@
-source config-nova.conf
+source config-beaglev-ahead.conf
 
-export RELEASE=sid
+export RELEASE="sid"
 export BUILD_MINIMAL="no"
 export BUILD_DESKTOP="no"
 
