Update c910-th1520.conf for booting
error at patch/misc/wireless-rtl8723cs/bluetooth-btrtl-add-rtl8703bs.patch

--- a/config/sources/families/c910-th1520.conf
+++ b/config/sources/families/c910-th1520.conf
@@ -1,21 +1,275 @@
 # Trying Here...
 
+# Thank you Igor for making this file available for me to change it up!
+
 LINUXCONFIG="beaglev-ahead-${BRANCH}"
 LINUXFAMILY="beaglev-ahead"
+KERNEL_MAJOR_MINOR="6.5"
 
-case "${BRANCH}" in 
-	edge)
-		declare -g KERNEL_MAJOR_MINOR="6.1"
-		KERNELSOURCE='https://github.com/silver2row/linux_for_armbian'
-		KERNELBRANCH="branch:master"
-		KERNELPATCHDIR="th1520-${BRANCH}"
-		;;
-esac
+ARCH="riscv64"
+
+#case "${BRANCH}" in
+#	edge)
+#		declare -g KERNEL_MAJOR_MINOR="6.5"
+#		KERNELSOURCE="https://github.com/silver2row/linux_for_armbian"
+#		KERNELBRANCH="branch:master"
+#		KERNELPATCHDIR="th1520-${BRANCH}"
+#		;;
+#esac
 
 #KERNELPATCHDIR="archive/beaglev-ahead-${KERNEL_MAJOR_MINOR}"
 
-write_uboot_platform() {
-	dd if=$SRC/packages/blobs/riscv64/silver2row/deploy/u-boot-with-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
-#	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=32800 conv=notrunc
-#	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=24576 conv=notrunc
-}
+#write_uboot_platform() {
+#	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
+#}
+
+#obtain_makefile_body_from_url() {
+#	make "https://github.com/silver2row/xuantie-ubuntu-armbian"
+#}
+
+#######################
+# Cloned from https://github.com/beagleboard/xuantie-ubuntu
+#######################
+
+#!/bin/bash
+
+OPENSBI_BRANCH="v1.3.1"
+UBOOT_BRANCH="beaglev-v2020.01-1.1.2"
+DTB_BRANCH="v6.5.x"
+#LINUX_BRANCH="master"
+#GIT_DEPTH="20"
+
+mkdir riscv-toolchain
+mkdir u-boot
+mkdir linux
+mkdir opensbi
+mkdir deploy
+mkdir BeagleBoard-DeviceTrees
+
+mkdir -p \
+"BeagleBoard-DeviceTrees/src" \
+"BeagleBoard-DeviceTrees/src/thead" \
+"BeagleBoard-DeviceTrees/src/thead/overlays" \
+"deploy/tmp"
+
+#if [ ! -f ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz ] ; then
+	###FIXME, move to public when released...
+echo "wget -c --directory-prefix=./mirror/ https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource//1663142514282/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz"
+wget -c --directory-prefix=./mirror/ https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource//1663142514282/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz
+#fi
+
+#if [ ! -f ./riscv-toolchain/bin/riscv64-unknown-linux-gnu-gcc-10.2.0 ] ; then
+echo "tar xf ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz ./riscv-toolchain/"
+tar xf ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz --strip-components=1 -C ./riscv-toolchain/
+#fi
+
+git config --global user.email "silver1row@cox.net"
+git config --global user.name "silver2row"
+
+if [ -d ./opensbi ] ; then
+	rm -rf ./opensbi || true
+fi
+
+echo "git clone -b ${OPENSBI_BRANCH} https://github.com/riscv-software-src/opensbi.git ./opensbi/"
+git clone -b ${OPENSBI_BRANCH} https://github.com/riscv-software-src/opensbi.git ./opensbi/
+
+if [ -d ./u-boot ] ; then
+	rm -rf ./u-boot || true
+fi
+#mkdir ./uboot/
+#if [ -f ./.gitlab-runner ] ; then
+#echo "git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/"
+#git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/
+#else
+echo "git clone -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/"
+git clone -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/
+#fi
+
+if [ -d ./BeagleBoard-DeviceTrees ] ; then
+	rm -rf ./BeagleBoard-DeviceTrees || true
+fi
+
+echo "git clone -b ${DTB_BRANCH} https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees.git"
+git clone -b ${DTB_BRANCH} https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees.git
+
+#mkdir ./linux/
+
+if [ -d ./linux ] ; then
+	rm -rf ./linux || true
+fi
+
+#mkdir ./linux/
+
+#if [ -f ./.gitlab-runner ] ; then
+#echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
+#git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
+#echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/"
+#git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/
+#else
+#echo "git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
+#git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
+echo "git clone https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/"
+git clone https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/
+#fi
+
+cd ./linux/
+git pull --no-edit https://git.beagleboard.org/beaglev-ahead/linux.git v6.5-rc3-BeagleV-Ahead-dts-mmc --no-rebase
+cd ../
+
+#if [ -f ./.gitlab-runner ] ; then
+#	rm -f ./.gitlab-runner || true
+#fi
+
+#FIXME: We need to solve the 0.7.1 vector enabled blobs, with mainline ubuntu/debian...
+#if [ ! -d ./baremetal-drivers ] ; then
+#	echo "Log baremetal-drivers: [git clone git@git.beagleboard.org:beaglev-ahead/baremetal-drivers.git --depth=${GIT_DEPTH}]"
+#	git clone git@git.beagleboard.org:beaglev-ahead/baremetal-drivers.git --depth=${GIT_DEPTH}
+#else
+#	cd ./baremetal-drivers/
+#	echo "Log baremetal-drivers: [git pull --rebase]"
+#	git pull --rebase
+#	cd -
+#fi
+#
+#if [ ! -d ./video_memory ] ; then
+#	echo "Log video_memory: [git clone git@git.beagleboard.org:beaglev-ahead/video_memory.git --depth=${GIT_DEPTH}]"
+#	git clone git@git.beagleboard.org:beaglev-ahead/video_memory.git --depth=${GIT_DEPTH}
+#else
+#	cd ./video_memory/
+#	echo "Log video_memory: [git pull --rebase]"
+#	git pull --rebase
+#	cd -
+#fi
+#
+#if [ ! -d ./vi-kernel ] ; then
+#	echo "Log vi-kernel: [git clone git@git.beagleboard.org:beaglev-ahead/vi-kernel.git --depth=${GIT_DEPTH}]"
+#	git clone git@git.beagleboard.org:beaglev-ahead/vi-kernel.git --depth=${GIT_DEPTH}
+#else
+#	cd ./vi-kernel/
+#	echo "Log vi-kernel: [git pull --rebase]"
+#	git pull --rebase
+#	cd -
+#fi
+#
+#if [ ! -d ./gpu_bxm_4_64-kernel ] ; then
+#	echo "Log gpu_bxm_4_64-kernel: [git clone git@git.beagleboard.org:beaglev-ahead/gpu_bxm_4_64-kernel.git --depth=${GIT_DEPTH}]"
+#	git clone git@git.beagleboard.org:beaglev-ahead/gpu_bxm_4_64-kernel.git --depth=${GIT_DEPTH}
+#else
+#	cd ./gpu_bxm_4_64-kernel/
+#	echo "Log gpu_bxm_4_64-kernel: [git pull --rebase]"
+#	git pull --rebase
+#	cd -
+#fi
+
+#if [ ! -d ./light-images-proprietary ] ; then
+#	echo "Log light-images-proprietary: [git clone https://git.beagleboard.org/beaglev-ahead/light-images-proprietary.git --depth=${GIT_DEPTH}]"
+#	git clone https://git.beagleboard.org/beaglev-ahead/light-images-proprietary.git --depth=${GIT_DEPTH}
+#else
+#	cd ./light-images-proprietary/
+#	echo "Log light-images-proprietary: [git pull --rebase]"
+#	git pull --rebase
+#	cd -
+#fi
+
+###################
+# Building riscv64 firmware in .bin format from OpenSBI
+# cloned from https://github.com/beagleboard/xuantie-ubuntu
+
+CORES=$(getconf _NPROCESSORS_ONLN)
+
+wdir=`pwd`
+make -C opensbi ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- PLATFORM=generic clean
+echo "make -C opensbi -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- PLATFORM=generic"
+make -C opensbi -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- PLATFORM=generic
+
+cp -v ./opensbi/build/platform/generic/firmware/fw_dynamic.bin ./deploy/
+
+touch ./.06_generate_boot.sh
+
+##################################
+# Cloned from https://github.com/beagleboard/xuantie-ubuntu
+##################################
+
+CORES=$(getconf _NPROCESSORS_ONLN)
+
+wdir=`pwd`
+make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- distclean
+
+#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig
+#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- menuconfig
+#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- savedefconfig
+#cp -v ./u-boot/defconfig ./u-boot/configs/light_beagle_defconfig
+#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- distclean
+
+echo "make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig"
+make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig
+echo "make -C u-boot -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- all"
+make -C u-boot -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- all
+
+cp -v ./u-boot/u-boot-with-spl.bin ./deploy/
+
+touch ./.06_generate_boot.sh
+
+######################################
+# Cloned from github.com/beagleboard/xuantie-ubuntu
+######################################
+
+CORES=$(getconf _NPROCESSORS_ONLN)
+
+wdir=`pwd`
+
+CC=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu-
+
+cd ./linux/
+cp -rv ../BeagleBoard-DeviceTrees/src/thead/*.dts ./arch/riscv/boot/dts/thead/
+
+#if [ ! -d ./arch/riscv/boot/dts/thead/overlays/ ] ; then
+#mkdir -p ./arch/riscv/boot/dts/thead/overlays/
+#fi
+#cp -v ../BeagleBoard-DeviceTrees/src/thead/overlays/*.dts ./arch/riscv/boot/dts/thead/overlays/
+
+git diff > log.txt ; cat log.txt ; rm log.txt
+
+cd ../BeagleBoard-DeviceTrees/
+make clean ; make
+cd ../linux
+
+make ARCH=riscv CROSS_COMPILE=${CC} clean
+make ARCH=riscv CROSS_COMPILE=${CC} defconfig
+./scripts/config --enable CONFIG_OF_OVERLAY
+./scripts/config --enable CONFIG_MMC_SDHCI_OF_DWCMSHC
+echo "make -j${CORES} ARCH=riscv CROSS_COMPILE=${CC} Image modules dtbs"
+make -j${CORES} ARCH=riscv CROSS_COMPILE=${CC} Image modules dtbs
+
+KERNEL_UTS=$(cat "${wdir}/linux/include/generated/utsrelease.h" | awk '{print $3}' | sed 's/\"//g' )
+touch ${wdir}/deploy/tmp
+make -s ARCH=riscv CROSS_COMPILE=${CC} modules_install INSTALL_MOD_PATH="${wdir}/deploy/tmp"
+
+echo "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz"
+#rm -rf "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz" || true
+
+echo "Compressing ${KERNEL_UTS}-modules.tar.gz..."
+echo "${KERNEL_UTS}" > "${wdir}/deploy/.modules"
+cd "./deploy/tmp" || true
+tar --create --gzip --file "../${KERNEL_UTS}-modules.tar.gz" ./*
+cd "${wdir}/linux/" || exit
+rm -rf "${wdir}/deploy/tmp" || true
+
+cp -v ./arch/riscv/boot/dts/thead/th1520-beaglev-ahead.dts ../BeagleBoard-DeviceTrees/src/thead/
+cp -v ./.config ../userpatches/config/kernel/beaglev.defconfig
+cp -v ./arch/riscv/boot/Image ../deploy/
+cp -v ./arch/riscv/boot/dts/thead/*.dtb ../deploy/
+
+cd ../
+
+#git diff --no-index > log.txt ; cat log.txt ; rm log.txt
+
+touch ./.05_generate_boot.sh
+touch ./.06_generate_root.sh
+
+#################################
+# use fastboot, i.e. sudo apt install fastboot
+#################################
+
+# and...
+#sudo ./05_generate_boot.sh && sudo ./06_generate_debian_console_root.sh
