--- a/config/sources/families/c910-th1520.conf
+++ b/config/sources/families/c910-th1520.conf
@@ -1,21 +1,23 @@
 # Trying Here...
+# Thanks to Igor for making this file available...
 
 LINUXCONFIG="beaglev-ahead-${BRANCH}"
 LINUXFAMILY="beaglev-ahead"
 
-case "${BRANCH}" in 
-	edge)
-		declare -g KERNEL_MAJOR_MINOR="6.1"
-		KERNELSOURCE='https://github.com/silver2row/linux_for_armbian'
-		KERNELBRANCH="branch:master"
-		KERNELPATCHDIR="th1520-${BRANCH}"
-		;;
-esac
+#case "${BRANCH}" in 
+#	edge)
+#		declare -g KERNEL_MAJOR_MINOR="6.1"
+#		KERNELSOURCE='https://github.com/silver2row/linux_for_armbian'
+#		KERNELBRANCH="branch:master"
+#		KERNELPATCHDIR="th1520-${BRANCH}"
+#		;;
+#esac
 
 #KERNELPATCHDIR="archive/beaglev-ahead-${KERNEL_MAJOR_MINOR}"
 
-write_uboot_platform() {
-	dd if=$SRC/packages/blobs/riscv64/silver2row/deploy/u-boot-with-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
+#write_uboot_platform() {
+#	dd if=$SRC/packages/blobs/riscv64/silver2row/deploy/u-boot-with-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=32800 conv=notrunc
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=24576 conv=notrunc
-}
+#}
+
