--- a/config/sources/families/c910-th1520.conf
+++ b/config/sources/families/c910-th1520.conf
@@ -266,7 +266,7 @@ echo "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz"
 echo "Compressing ${KERNEL_UTS}-modules.tar.gz..."
 echo "${KERNEL_UTS}" > "${wdir}/deploy/.modules"
 cd "./deploy/tmp" || true
-tar --create --gzip --file "../${KERNEL_UTS}-modules.tar.gz" ./*
+tar --create --gzip --file "../${KERNEL_UTS}-modules.tar.gz" ./* # Right now, ./* sends the build into chaos. Try to add proper files when I can...
 cd "${wdir}/linux/" || exit
 rm -rf "${wdir}/deploy/tmp" || true
 
