--- a/config/sources/families/c910-th1520.conf
+++ b/config/sources/families/c910-th1520.conf
@@ -7,6 +7,7 @@ LINUXFAMILY="beaglev-ahead"
 KERNEL_MAJOR_MINOR="6.5"
 
 ARCH="riscv64"
+./*
 #case "${BRANCH}" in 
 #	edge)
 #		declare -g KERNEL_MAJOR_MINOR="6.1"
@@ -35,7 +36,7 @@ ARCH="riscv64"
 #obtain_makefile_body_from_url() {
 #	make "https://github.com/silver2row/xuantie-ubuntu-armbian"
 #}
-
+*/.
 #######################
 # Cloned from https://github.com/beagleboard/xuantie-ubuntu
 #######################
@@ -255,12 +256,12 @@ touch ${wdir}/deploy/tmp
 make -s ARCH=riscv CROSS_COMPILE=${CC} modules_install INSTALL_MOD_PATH="${wdir}/deploy/tmp"
 
 echo "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz"
-#rm -rf "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz" || true
+rm -rf "${wdir}/deploy/${KERNEL_UTS}-modules.tar.gz" || true
 
 echo "Compressing ${KERNEL_UTS}-modules.tar.gz..."
 echo "${KERNEL_UTS}" > "${wdir}/deploy/.modules"
 cd "./deploy/tmp" || true
-tar --create --gzip --file "../${KERNEL_UTS}-modules.tar.gz" ./* # Right now, ./* sends the build into chaos. Try to add proper files when I can...
+tar --create --gzip --file "../${KERNEL_UTS}-modules.tar.gz"
 cd "${wdir}/linux/" || exit
 rm -rf "${wdir}/deploy/tmp" || true
 
@@ -271,7 +272,7 @@ cp -v ./arch/riscv/boot/dts/thead/*.dtb ../deploy/
 
 cd ../
 
-#git diff --no-index > log.txt ; cat log.txt ; rm log.txt
+git diff --no-index > log.txt ; cat log.txt ; rm log.txt
 
 touch ./.05_generate_boot.sh
 touch ./.06_generate_root.sh
@@ -280,6 +281,5 @@ touch ./.06_generate_root.sh
 # use fastboot, i.e. sudo apt install fastboot
 #################################
 
-# and...
-#sudo ./05_generate_boot.sh && sudo ./06_generate_debian_console_root.sh
->>>>>>> 3a7fb0cd81e612be72ef63d410ada6a42c1bf631
+
+sudo ./05_generate_boot.sh && sudo ./06_generate_debian_console_root.sh
