--- a/config/sources/families/c910-th1520.conf
+++ b/config/sources/families/c910-th1520.conf
@@ -7,36 +7,36 @@ LINUXFAMILY="beaglev-ahead"
 KERNEL_MAJOR_MINOR="6.5"
 
 ARCH="riscv64"
-./*
-#case "${BRANCH}" in 
+
+# case "${BRANCH}" in 
 #	edge)
 #		declare -g KERNEL_MAJOR_MINOR="6.1"
 #		KERNELSOURCE='https://github.com/silver2row/linux_for_armbian'
 
-#case "${BRANCH}" in
+# case "${BRANCH}" in
 #	edge)
 #		declare -g KERNEL_MAJOR_MINOR="6.5"
 #		KERNELSOURCE="https://github.com/silver2row/linux_for_armbian"
 #		KERNELBRANCH="branch:master"
 #		KERNELPATCHDIR="th1520-${BRANCH}"
 #		;;
-#esac
+# esac
 
-#KERNELPATCHDIR="archive/beaglev-ahead-${KERNEL_MAJOR_MINOR}"
+# KERNELPATCHDIR="archive/beaglev-ahead-${KERNEL_MAJOR_MINOR}"
 
-#write_uboot_platform() {
+# write_uboot_platform() {
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/deploy/u-boot-with-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=32800 conv=notrunc
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot. of=$2 bs=512 seek=24576 conv=notrunc
-#}
+# }
 
 #	dd if=$SRC/packages/blobs/riscv64/silver2row/u-boot-spl.bin of=$2 bs=8192 seek=16 conv=notrunc
-#}
+# }
 
-#obtain_makefile_body_from_url() {
+# obtain_makefile_body_from_url() {
 #	make "https://github.com/silver2row/xuantie-ubuntu-armbian"
-#}
-*/.
+# }
+
 #######################
 # Cloned from https://github.com/beagleboard/xuantie-ubuntu
 #######################
@@ -46,8 +46,8 @@ ARCH="riscv64"
 OPENSBI_BRANCH="v1.3.1"
 UBOOT_BRANCH="beaglev-v2020.01-1.1.2"
 DTB_BRANCH="v6.5.x"
-#LINUX_BRANCH="master"
-#GIT_DEPTH="20"
+# LINUX_BRANCH="master"
+# GIT_DEPTH="20"
 
 mkdir riscv-toolchain
 mkdir u-boot
@@ -62,16 +62,16 @@ BeagleBoard-DeviceTrees/src/thead \
 BeagleBoard-DeviceTrees/src/thead/overlays \
 deploy/"
 
-#if [ ! -f ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz ] ; then
+# if [ ! -f ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz ] ; then
 	###FIXME, move to public when released...
 echo "wget -c --directory-prefix=./mirror/ https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource//1663142514282/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz"
 wget -c --directory-prefix=./mirror/ https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource//1663142514282/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz
-#fi
+# fi
 
-#if [ ! -f ./riscv-toolchain/bin/riscv64-unknown-linux-gnu-gcc-10.2.0 ] ; then
+# if [ ! -f ./riscv-toolchain/bin/riscv64-unknown-linux-gnu-gcc-10.2.0 ] ; then
 echo "tar xf ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz ./riscv-toolchain/"
 tar xf ./mirror/Xuantie-900-gcc-linux-5.10.4-glibc-x86_64-V2.6.1-20220906.tar.gz --strip-components=1 -C ./riscv-toolchain/
-#fi
+# fi
 
 git config --global user.email "silver1row@cox.net"
 git config --global user.name "silver2row"
@@ -86,14 +86,14 @@ git clone -b ${OPENSBI_BRANCH} https://github.com/riscv-software-src/opensbi.git
 if [ -d ./u-boot ] ; then
 	rm -rf ./u-boot || true
 fi
-#mkdir ./uboot/
-#if [ -f ./.gitlab-runner ] ; then
-#echo "git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/"
-#git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/
-#else
+# mkdir ./uboot/
+# if [ -f ./.gitlab-runner ] ; then
+# echo "git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/"
+# git clone --reference-if-able /mnt/yocto-cache/git/beaglev-ahead-u-boot/ -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/
+# else
 echo "git clone -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/"
 git clone -b ${UBOOT_BRANCH} https://github.com/beagleboard/beaglev-ahead-u-boot.git ./u-boot/
-#fi
+# fi
 
 if [ -d ./BeagleBoard-DeviceTrees ] ; then
 	rm -rf ./BeagleBoard-DeviceTrees || true
@@ -102,84 +102,84 @@ fi
 echo "git clone -b ${DTB_BRANCH} https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees.git"
 git clone -b ${DTB_BRANCH} https://git.beagleboard.org/beagleboard/BeagleBoard-DeviceTrees.git
 
-#mkdir ./linux/
+# mkdir ./linux/
 
 if [ -d ./linux ] ; then
 	rm -rf ./linux || true
 fi
 
-#mkdir ./linux/
+# mkdir ./linux/
 
-#if [ -f ./.gitlab-runner ] ; then
-#echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
-#git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
-#echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/"
-#git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/
-#else
-#echo "git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
-#git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
+# if [ -f ./.gitlab-runner ] ; then
+# echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
+# git clone --reference-if-able /mnt/yocto-cache/git/linux-src/ -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
+# echo "git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/"
+# git clone --reference-if-able /mnt/yocto-cache/git/linux-src/  https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/
+# else
+# echo "git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/"
+# git clone -b ${LINUX_BRANCH} https://github.com/beagleboard/linux.git ./linux/
 echo "git clone https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/"
 git clone https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git ./linux/
-#fi
+# fi
 
 cd ./linux/
 git pull --no-edit https://git.beagleboard.org/beaglev-ahead/linux.git v6.5-rc3-BeagleV-Ahead-dts-mmc --no-rebase
 cd ../
 
-#if [ -f ./.gitlab-runner ] ; then
+# if [ -f ./.gitlab-runner ] ; then
 #	rm -f ./.gitlab-runner || true
-#fi
+# fi
 
-#FIXME: We need to solve the 0.7.1 vector enabled blobs, with mainline ubuntu/debian...
-#if [ ! -d ./baremetal-drivers ] ; then
+# FIXME: We need to solve the 0.7.1 vector enabled blobs, with mainline ubuntu/debian...
+# if [ ! -d ./baremetal-drivers ] ; then
 #	echo "Log baremetal-drivers: [git clone git@git.beagleboard.org:beaglev-ahead/baremetal-drivers.git --depth=${GIT_DEPTH}]"
 #	git clone git@git.beagleboard.org:beaglev-ahead/baremetal-drivers.git --depth=${GIT_DEPTH}
-#else
+# else
 #	cd ./baremetal-drivers/
 #	echo "Log baremetal-drivers: [git pull --rebase]"
 #	git pull --rebase
 #	cd -
-#fi
+# fi
 #
-#if [ ! -d ./video_memory ] ; then
+# if [ ! -d ./video_memory ] ; then
 #	echo "Log video_memory: [git clone git@git.beagleboard.org:beaglev-ahead/video_memory.git --depth=${GIT_DEPTH}]"
 #	git clone git@git.beagleboard.org:beaglev-ahead/video_memory.git --depth=${GIT_DEPTH}
-#else
+# else
 #	cd ./video_memory/
 #	echo "Log video_memory: [git pull --rebase]"
 #	git pull --rebase
 #	cd -
-#fi
+# fi
 #
-#if [ ! -d ./vi-kernel ] ; then
+# if [ ! -d ./vi-kernel ] ; then
 #	echo "Log vi-kernel: [git clone git@git.beagleboard.org:beaglev-ahead/vi-kernel.git --depth=${GIT_DEPTH}]"
 #	git clone git@git.beagleboard.org:beaglev-ahead/vi-kernel.git --depth=${GIT_DEPTH}
-#else
+# else
 #	cd ./vi-kernel/
 #	echo "Log vi-kernel: [git pull --rebase]"
 #	git pull --rebase
 #	cd -
-#fi
+# fi
 #
-#if [ ! -d ./gpu_bxm_4_64-kernel ] ; then
+# if [ ! -d ./gpu_bxm_4_64-kernel ] ; then
 #	echo "Log gpu_bxm_4_64-kernel: [git clone git@git.beagleboard.org:beaglev-ahead/gpu_bxm_4_64-kernel.git --depth=${GIT_DEPTH}]"
 #	git clone git@git.beagleboard.org:beaglev-ahead/gpu_bxm_4_64-kernel.git --depth=${GIT_DEPTH}
-#else
+# else
 #	cd ./gpu_bxm_4_64-kernel/
 #	echo "Log gpu_bxm_4_64-kernel: [git pull --rebase]"
 #	git pull --rebase
 #	cd -
-#fi
+# fi
 
-#if [ ! -d ./light-images-proprietary ] ; then
+# if [ ! -d ./light-images-proprietary ] ; then
 #	echo "Log light-images-proprietary: [git clone https://git.beagleboard.org/beaglev-ahead/light-images-proprietary.git --depth=${GIT_DEPTH}]"
 #	git clone https://git.beagleboard.org/beaglev-ahead/light-images-proprietary.git --depth=${GIT_DEPTH}
-#else
+# else
 #	cd ./light-images-proprietary/
 #	echo "Log light-images-proprietary: [git pull --rebase]"
 #	git pull --rebase
 #	cd -
-#fi
+# fi
 
 ###################
 # Building riscv64 firmware in .bin format from OpenSBI
@@ -194,7 +194,7 @@ make -C opensbi -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/
 
 cp -v ./opensbi/build/platform/generic/firmware/fw_dynamic.bin ./deploy/
 
-touch ./.06_generate_boot.sh
+touch ./06_generate_boot.sh
 
 ##################################
 # Cloned from https://github.com/beagleboard/xuantie-ubuntu
@@ -205,11 +205,11 @@ CORES=$(getconf _NPROCESSORS_ONLN)
 wdir=`pwd`
 make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- distclean
 
-#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig
-#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- menuconfig
-#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- savedefconfig
-#cp -v ./u-boot/defconfig ./u-boot/configs/light_beagle_defconfig
-#make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- distclean
+# make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig
+# make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- menuconfig
+# make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- savedefconfig
+# cp -v ./u-boot/defconfig ./u-boot/configs/light_beagle_defconfig
+# make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- distclean
 
 echo "make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig"
 make -C u-boot ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu- light_beagle_defconfig
@@ -218,7 +218,7 @@ make -C u-boot -j${CORES} ARCH=riscv CROSS_COMPILE=${wdir}/riscv-toolchain/bin/r
 
 cp -v ./u-boot/u-boot-with-spl.bin ./deploy/
 
-touch ./.06_generate_boot.sh
+# touch ./06_generate_boot.sh
 
 ######################################
 # Cloned from github.com/beagleboard/xuantie-ubuntu
@@ -233,10 +233,10 @@ CC=${wdir}/riscv-toolchain/bin/riscv64-unknown-linux-gnu-
 cd ./linux/
 cp -rv ../BeagleBoard-DeviceTrees/src/thead/*.dts ./arch/riscv/boot/dts/thead/
 
-#if [ ! -d ./arch/riscv/boot/dts/thead/overlays/ ] ; then
-#mkdir -p ./arch/riscv/boot/dts/thead/overlays/
-#fi
-#cp -v ../BeagleBoard-DeviceTrees/src/thead/overlays/*.dts ./arch/riscv/boot/dts/thead/overlays/
+# if [ ! -d ./arch/riscv/boot/dts/thead/overlays/ ] ; then
+# mkdir -p ./arch/riscv/boot/dts/thead/overlays/
+# fi
+cp -v ../BeagleBoard-DeviceTrees/src/thead/overlays/*.dts ./arch/riscv/boot/dts/thead/overlays/
 
 git diff > log.txt ; cat log.txt ; rm log.txt
 
